Minor change in notebook

--- a/Fetch Torch MTL.ipynb
+++ b/Fetch Torch MTL.ipynb
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "# If you are passing in a text string, you don't need to pass a second argument.\n",
+    "# If you are passing in a text string, you don't need to pass a third argument.\n",
     "embedding = generate_sentence_embeddings(basicBERTmodel, \"INSERT SENTENCE HERE\")\n",
     "print(embedding.shape)\n",
     "print(embedding[0][:50])"
